# cls_var_behavior

./: LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
cls_var_behavior/: __init__.py  base.py  getter_child.py  setter_child.py
tests/: .test_code.py.swp  test_code.py
